# the_last_primordial

./: .gitignore  Cargo.toml  TheLastPrimordial.csproj  TheLastPrimordial.csproj.old  TheLastPrimordial.sln  game_lore.txt  icon.svg.import  main.tscn  opening_chapter_gdd.md  project.godot
.agents/: AGENTS.md
Brain/.obsidian/: graph.json  workspace.json
Brain/Developer Bible/: Central Themes.md  Gameplay Progression.md  Symbolism.md  Timeline.md
Brain/Lore/: Lore Index.md
Brain/Story/: Part 1 – The Realm of Time.md  Part 2 – The Burden of the Seven.md  Part 2 – The Collapse of Reality.md  Part 2 – The Judgment of the Seven.md  Part 2 – The Realms of Space and Life.md  Part 3 – Death, Chaos, and the Cracks in Memory.md  Part 3 – The Black Sword and the Journey Begins.md  Part 3 – The Three Choices.md  Story Index.md  (+70 more)
docs/: GDD.md  art_style_guide.md  audio_direction.md  index.md  tool_manifest.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
project_brain/: context.md
scenes/: ashen_hollow.tscn  forest_escape.tscn  level_1.tscn  nightmare_prologue.tscn  player.tscn  test_level.tscn
src/: AshenHollowController.cs  AshenHollowController.cs.uid  DialogueSystem.cs  DialogueSystem.cs.uid  ForestEscapeController.cs  ForestEscapeController.cs.uid  GameState.cs  GameState.cs.uid  Interactable.cs  Interactable.cs.uid  Main.cs  PhasePlatform.cs  PhasePlatform.cs.uid  PrologueController.cs  PrologueController.cs.uid  components.rs  main.rs  states.rs
src/ui/: hud.rs  (+2 more)
(+466 files in other folders)
