[package]
name = "the_last_primordial"
version = "0.1.0"
edition = "2024"
description = "A 2D action-adventure featuring seven unique realms, philosophical storytelling, and three branching endings"
authors = ["Surabhi Pandey", "Jemin Morabiya", "Tarun Ahuja"]
license = "MIT"

[dependencies]
# Game Engine
bevy = { version = "0.19", features = ["default"] }

# Tilemap loading from LDtk level editor
bevy_ecs_ldtk = "0.15"

# Audio playback with Kira backend
bevy_kira_audio = { version = "0.26", features = ["ogg", "wav"] }

# 2D Physics engine
bevy_rapier2d = "0.34"

# Serialization for save/load and dialogue files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.10"

# Compile with optimizations in dev mode for Bevy performance
[profile.dev]
opt-level = 1

# Full optimization for dependencies even in dev builds
[profile.dev.package."*"]
opt-level = 3
